k8s/ingress/staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: antrein
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "3M"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
      # add_header Access-Control-Allow-Origin $http_origin;
      add_header Access-Control-Allow-Methods "PUT,POST, GET, OPTIONS, PATCH";
      more_set_headers "Access-Control-Allow-Credentials: true";
      more_set_headers "Access-Control-Expose-Headers: *";
      add_header Access-Control-Allow-Headers "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin,econolab-uid-authorization,authorization,authorization-v2,api-key,base-url,method,path";    
spec:
  ingressClassName: nginx
  tls:
    - secretName: staging-tls
      hosts:
        - staging-poc-api.antrein.com
        - staging-poc.antrein.com
  rules:
  - host: staging-poc-api.antrein.com
    http:
      paths:
      - backend:
          service:
            name: poc-be
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: staging-poc.antrein.com
    http:
      paths:
      - backend:
          service:
            name: poc-fe
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
